<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.direct2guests.d2g_tv.Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainbgc"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <VideoView
            android:id="@+id/videoViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uid"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="47dp"
            android:fontFamily="@font/gothambook"
            android:text="textClock"
            android:textAlignment="viewEnd"
            android:textColor="#ffff"
            android:textSize="30sp"
            android:typeface="monospace"
            android:visibility="gone" />

        <TextView
            android:id="@+id/dateTxtmain"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textClock"
            android:layout_alignEnd="@+id/textClock"
            android:fontFamily="@font/gothambook"
            android:paddingTop="0dp"
            android:text="@string/launcherDate"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:typeface="monospace"
            android:visibility="gone"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:text="TextView"
            android:textColor="#fff"
            android:textSize="25sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/welcomeTxtV"
            android:layout_width="429dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="266dp"
            android:layout_marginBottom="180dp"
            android:fontFamily="@font/gothambook"
            android:text="@string/indexWelcome"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#00723C92"
            android:textSize="18sp"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/guestNameTxtV4"
            android:layout_width="429dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/welcomeTxtV"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-176dp"
            android:layout_marginBottom="324dp"
            android:fontFamily="@font/brandonbold"
            android:text="@string/indexGuestName"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="12sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/hotelNameTxtV"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/dateTxtmain"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="73dp"
            android:fontFamily="@font/gothambook"
            android:text="@string/indexHotelName"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            android:visibility="gone" />


        <FrameLayout
            android:layout_width="193dp"
            android:layout_height="97dp"
            android:layout_alignTop="@+id/textClock"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="19dp"
            android:visibility="gone">

        </FrameLayout>

        <RelativeLayout
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="366dp"
            android:layout_marginBottom="102dp">

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="193dp"
                android:layout_height="24dp"


                android:layout_alignParentTop="true"
                android:layout_marginTop="14dp"
                android:background="#00723C92"
                android:backgroundTint="#723C92"
                android:focusableInTouchMode="true"
                android:onClick="continueButton"
                android:text="@string/indexContinueButton"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#00FCBD2E"
                android:textSize="12sp"
                android:typeface="normal"
                tools:visibility="visible">

                <requestFocus />
            </Button>

            <Button
                android:id="@+id/langSelectButton"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="41dp"
                android:background="@drawable/btn_transparent"
                android:focusable="auto"
                android:onClick="langSelect"
                android:text="@string/langText"
                android:visibility="gone"
                tools:layout_editor_absoluteX="669dp"
                tools:layout_editor_absoluteY="285dp" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
