<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="135dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/btn_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--android:background="#456672"-->


        <RelativeLayout
            android:id="@+id/viewSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="353dp"
                android:layout_height="76dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="19dp"
                android:gravity="center_horizontal">

                <Button

                    android:id="@+id/chanBttn"
                    android:layout_width="134dp"
                    android:layout_height="58dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="32dp"
                    android:background="@drawable/img"
                    android:padding="20dp"
                    android:text="@string/formChanBttn"
                    android:textColor="@color/txtcolor"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/vodBttn"
                    android:layout_width="134dp"
                    android:layout_height="58dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="35dp"
                    android:background="@drawable/img"
                    android:padding="20dp"
                    android:text="@string/formVODBttn"
                    android:textColor="@color/txtcolor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <requestFocus />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="22dp"
                android:text="@string/formViewChoices"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:text="@string/formViewChoices"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>